mariadb-5.5 (5.5.39-1) unstable; urgency=low

  * New upstream release.
  * Add patch to fix kFreeBSD builds
  * Fixed wrongly applied fix of MDEV-5957 (Closes: #752203)

 -- Otto Kekäläinen <otto@seravo.fi>  Thu, 07 Aug 2014 12:16:19 +0300

mariadb-5.5 (5.5.38-1) unstable; urgency=low

  * New upstream release.
  * Added upstream release signing key in preparation for future use
  * Made libterm-readkey-perl a depends instead of suggest (LP: #1324082)
  * Add patch to fix HPPA build error (Closes: #751805)
  * Fixed lots and lots of Lintian warnings
  * Disabled TokuDB (Closes: #753222). Remember to re-enable if once
    https://mariadb.atlassian.net/browse/MDEV-6449 is closed.
  * Add in retrospect corresponding MariaDB CVEs for
    Oracle SPU July 2014 (Closes: #754940)
    - CVE-2014-2494
    - CVE-2014-4207
    - CVE-2014-4243
    - CVE-2014-4258
    - CVE-2014-4260

 -- Otto Kekäläinen <otto@seravo.fi>  Tue, 17 Jun 2014 16:24:35 +0300

mariadb-5.5 (5.5.37-1) unstable; urgency=low

  * New upstream release, fixing the following security issues:
    * Corresponding MariaDB CVEs for Oracle SPU April 2014 (Closes: #745330)
      - CVE-2014-0384
      - CVE-2014-2419
      - CVE-2014-2430
      - CVE-2014-2431
      - CVE-2014-2432
      - CVE-2014-2436
      - CVE-2014-2438
      - CVE-2014-2440
  * Re-enabled TokuDB with "if arch amd64" in d/rules
  * Applied patch to log init output better
    (Closes https://mariadb.atlassian.net/browse/MDEV-5957)

 -- Otto Kekäläinen <otto@seravo.fi>  Thu, 17 Apr 2014 20:55:22 +0300

mariadb-5.5 (5.5.36-1) unstable; urgency=low

  [ Otto Kekäläinen ]
  * New upstream release.
  * Updated Danish debconf translation (Closes: #739750).
  * d/control: Added explicit Conflicts/Replaces for mysql-5.6 packages
    (Closes: #739841).
  * d/control: Update for use of virtual-* packages for switching to/from
    MySQL alternatives.

  [ James Page ]
  * d/control: Drop Nicholas from Uploaders, MIA (Closes: #739360).